--- a/index.html
+++ b/index.html
@@ -1,30 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-us">
 
-<head>
-  <meta charset="UTF-8">
-  <title>My First Page</title>
-</head>
+<title>Please Click Below</title>
+<h1>Please Click Below</h1>
 
-<body>
-  <!-- Header -->
-  <h1>Hello World!</h1>
-
-  <!-- Image -->
-  <img src="http://en.spongepedia.org/images/thumb/3/33/Spongebob!!!.jpg/180px-Spongebob!!!.jpg" alt="Spongebob!" />
-  <br>
-
-  <!-- Link with New Tab -->
-  <a href="https://www.google.com" target="_blank">Opens new tab</a>
-  <br>
-
-  <!-- Bold Link -->
-  <strong><a href="https://www.youtube.com">This is a bold link</a></strong>
-  <br>
-
-  <!-- Placeholder link -->
-  <a href="#">This is placeholder link goes nowhere, for now</a>
-
-</body>
-
-</html>
+<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
+codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="320" height="263"><param name="wmode"
+value="transparent" /><param name="movie"
+value="http://video.gprime.net/media/flv/flv.swf?gN=rickroll&gX=640&gY=480&gL=0"></param>
+<embed src="http://video.gprime.net/media/flv/flv.swf?gN=rickroll&gX=640&gY=480&gL=0"
+wmode="transparent" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" width="320" height="263"></embed></object>
