--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-
+loader: 'less-loader',
+options: {
+  javascriptEnabled: true,
+},
 <title>Please Click Below</title>
 <h1>Please Click Below</h1>
 
