--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
-codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="320" height="263"><param name="wmode"
-value="transparent" /><param name="movie"
-value="http://video.gprime.net/media/flv/flv.swf?gN=rickroll&gX=640&gY=480&gL=0"></param>
-<embed src="http://video.gprime.net/media/flv/flv.swf?gN=rickroll&gX=640&gY=480&gL=0"
-wmode="transparent" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" width="320" height="263"></embed></object>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Rick Roll</title>
+  </head>
+  <body>
+    <iframe id = "rick" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+    <div id="roll" onclick="roll()">
+      
+      Click me
+    
+    </div>
+  </body>
+</html>
