--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Rick Roll</title>
   </head>
   <body>
-    <iframe id = "rick" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+    <iframe id = "rick" width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID?autoplay=1" allow='autoplay'></iframe>
     <div id="roll" onclick="roll()">
       
       Click me
