--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <iframe id = "rick" width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID?autoplay=1" allow='autoplay'></iframe>
     <div id="roll" onclick="roll()">
       
-      Click me
+      Test
     
     </div>
   </body>
