--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Rick Roll</title>
-  </head>
-  <body>
-    <iframe id = "rick" width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID?autoplay=1" allow='autoplay'></iframe>
-    <div id="roll" onclick="roll()">
-      
-      Test
-    
-    </div>
-  </body>
-</html>
+<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" 
+codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="640" height="525"><param name="wmode" 
+value="transparent" /><param name="movie" 
+value="http://video.gprime.net/media/flv/flv.swf?gN=rickroll&gX=640&gY=480&gL=0"></param>
+<embed src="http://video.gprime.net/media/flv/flv.swf?gN=rickroll&gX=640&gY=480&gL=0"
+wmode="transparent" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" width="640" height="525"></embed></object>
