--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="640" height="525"><param name="wmode" 
 value="transparent" /><param name="movie" 
 value="http://video.gprime.net/media/flv/flv.swf?gN=rickroll&gX=640&gY=480&gL=0"></param>
+<video src="http://video.gprime.net/media/flv/flv.swf?gN=rickroll&gX=640&gY=480&gL=0" width="320" height="200" controls preload></video>
 <embed src="http://video.gprime.net/media/flv/flv.swf?gN=rickroll&gX=640&gY=480&gL=0"
 wmode="transparent" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" width="640" height="525"></embed></object>
