--- a/index.html
+++ b/index.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<!-- CSS Stylesheets with Relative Paths -->
+<html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>WeatherPy</title>
+  <title>latitude</title>
+
+  <!-- This line is money! It points your HTML to the CSS file. -->
+  <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-  <section>
-    <h1>WeatherPy</h1>
-    <article>
-    <a target="_blank" href="assets/images/cloudymap.png">
-      <img src="assets/images/cloudymap.png" alt="Cloudy Map">
-    </a>
-    <p><em>Cloudy Map</em></p>
-    </article>
-    <hr>
-      <article>
-        <a target="_blank" href="assets/images/humiditymap.png">
-          <img src="assets/images/humiditymap.png" alt="Humidity Map">
-        </a>
-        <p><em>Humidity Map</em></p>
-      </article>
-    <hr>
-    <article>
-      <a href="assets/images/temperaturemap.png">
-      <img target="_blank" src="assets/images/temperaturemap.png" alt="Tempurature Map">
-      </a>
-      <p><em>Temperature Map</em></p>
-    </article>
-    <hr>
-    <!-- an example using figure/ficaption -->
-    <figure>
-      <a target="_blank" href="assets/images/windmap.png">
-      <img src="assets/images/windmap.png" alt="Wind Map">
-      </a>
-      <figcaption><em>Wind Map</em></figcaption>
-    </figure>
-  </section>
+
+  <header>
+    <h1>Latitude</h1>
+  </header>
+
+  <main class="container">
+    <section id="main-bio">
+      <section id="figure">
+        <img id="bio-image" src="assets/images/temperaturemap.png" alt="Tempurature Map">
+      </section>
+      <h2>Summary: Latitude vs. X</h2>
+      <p> The purpose of this project was to analyze how weather 
+          changes as you get closer to the equator. To accomplish this analysis,
+          we first pulled data from the OpenWeatherMap API to assemple a dataset
+          on over 500 cities.
+    
+    
+          After assembling the dataset, we used Matplotlib to plot various aspects of 
+          the weather vs. latitude. Factors we looked at included: temprature, cloudiness, wind speed,
+          and humpdity. This side provides the source data and visualiztions created as part 
+          of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.
+        </p>
+    </section>
+
+    <aside id="contact-info">
+      <h2>Contact Info</h2>
+      <ul>
+        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+      </ul>
+    </aside>
+  </main>
+
 </body>
 
 </html>
