--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
     </section>
 
     <aside id="contact-info">
-      <h2>Contact Info</h2>
+      <h2>Visualizations</h2>
       <ul>
-        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+        <img id = "contact-info" src="assets/images/humiditymap.png" alt="Humidity Map">
+        <img id = "contact-info" src="assets/images/temperaturemap.png" alt="Tempurature Map">
+        <img id = "contact-info" src="assets/images/cloudymap.png" alt="Cloudy Map">
+
       </ul>
     </aside>
   </main>
