--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             temtrature, cloudiness, wind speed, and humidity. This site provides the source data 
             and visualizations created as part of the analysis, as well as explanations and descriptions of 
             any trends and correlations witnessed. 
+        </p>
+    </div>
+
+    <div class="visuals">
+    
+        <h2>Visualizations </h2>
+        <hr/>
+
     </div>
 
 
