--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
     
         <h2>Visualizations </h2>
         <hr/>
+        <img src="/images/temperaturemap.png" alt="temp map">
+        <img src="/images/cloudymap.png" alt="cloud mmap">
+        <img src="/images/humiditymap.png" alt="humid map">
+        <img src="/images/windmap.png" alt="wind map">
+
 
     </div>
 
