--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="container">
         <header>
             <h2 class="title-letter">Latitude</h2>
-            <ul class="options">
+            <ul class="options show-desktop hide-mobile">
                 <li><a href="#">Plots &#x25BC;</a>
                     <ul>
-                        <li><a href="#">Max Temprature</a></li>
-                        <li><a href="#">Humidity</a></li>
-                        <li><a href="#">Cloudiness</a></li>
-                        <li><a href="#">Windspeed</a></li>
+                        <li><a href="maxtemp.html">Max Temprature</a></li>
+                        <li><a href="humidity.html">Humidity</a></li>
+                        <li><a href="cloudiness.html">Cloudiness</a></li>
+                        <li><a href="windspeed.html">Windspeed</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Comparison </a></li>
