--- a/cloudiness.html
+++ b/cloudiness.html
@@ -13,6 +13,7 @@
             <header>
                 <h2 class="title-letter">Latitude</h2>
                 <ul class="options show-desktop hide-mobile">
+                    <li><a href="index.html">Home</a>
                     <li><a href="#">Plots &#x25BC;</a>
                         <ul>
                             <li><a href="maxtemp.html">Max Temprature</a></li>
