--- a/maxtemp.html
+++ b/maxtemp.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>Document</title>
+    <title>Latitude</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                         </ul>
                     </li>
                     <li><a href="#">Comparison </a></li>
-                    <li><a href="#">Data</a></li>
+                    <li><a href="data.html">Data</a></li>
                 </ul>
             </header>
         </div>
