--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Latitude</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
                     </ul>
                 </li>
                 <li><a href="#">Comparison </a></li>
-                <li><a href="#">Data</a></li>
+                <li><a href="data.html">Data</a></li>
             </ul>
         </header>
     </div>
