second to last change

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     
         <h2>Visualizations </h2>
         <hr/>
-        <img src="/images/temperaturemap.png" alt="temp map">
-        <img src="/images/cloudymap.png" alt="cloud mmap">
-        <img src="/images/humiditymap.png" alt="humid map">
-        <img src="/images/windmap.png" alt="wind map">
+       <a href="maxtemp.html"><img src="/images/temperaturemap.png" alt="temp map"> </a> 
+       <a href="cloudiness.html"> <img src="/images/cloudymap.png" alt="cloud mmap"> </a>
+       <a href="humidity.html"> <img src="/images/humiditymap.png" alt="humid map"> </a>
+       <a href="windspeed.html"> <img src="/images/windmap.png" alt="wind map"> </a>
 
 
     </div>
